--- a/ZhongWenKaraoke/Base.lproj/Main.storyboard
+++ b/ZhongWenKaraoke/Base.lproj/Main.storyboard
@@ -26,28 +26,43 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MiguSongCell" textLabel="iPD-3H-hev" detailTextLabel="5tq-y9-7rd" style="IBUITableViewCellStyleSubtitle" id="XYH-qT-rCt" customClass="MiguSongCell" customModule="ZhongWenKaraoke" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MiguSongCell" rowHeight="100" id="XYH-qT-rCt" customClass="MiguSongCell" customModule="ZhongWenKaraoke" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XYH-qT-rCt" id="ZVv-E3-pkm">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iPD-3H-hev">
-                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K32-D6-VSz">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="uBd-yH-hb5"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8AN-5X-QLW">
+                                                    <rect key="frame" x="108" y="8" width="259" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5tq-y9-7rd">
-                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gYw-Zv-e07">
+                                                    <rect key="frame" x="108" y="75" width="259" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="8AN-5X-QLW" firstAttribute="leading" secondItem="K32-D6-VSz" secondAttribute="trailing" constant="8" symbolic="YES" id="3KX-Rm-suC"/>
+                                                <constraint firstItem="8AN-5X-QLW" firstAttribute="leading" secondItem="gYw-Zv-e07" secondAttribute="leading" id="8BZ-Ob-vD2"/>
+                                                <constraint firstItem="K32-D6-VSz" firstAttribute="centerY" secondItem="ZVv-E3-pkm" secondAttribute="centerY" id="BLz-Vu-549"/>
+                                                <constraint firstItem="gYw-Zv-e07" firstAttribute="top" secondItem="8AN-5X-QLW" secondAttribute="bottom" constant="46" id="E42-O3-20n"/>
+                                                <constraint firstItem="8AN-5X-QLW" firstAttribute="trailing" secondItem="gYw-Zv-e07" secondAttribute="trailing" id="Eoq-vI-Hcq"/>
+                                                <constraint firstItem="8AN-5X-QLW" firstAttribute="trailing" secondItem="ZVv-E3-pkm" secondAttribute="trailingMargin" id="Ksh-Cl-Mf1"/>
+                                                <constraint firstItem="K32-D6-VSz" firstAttribute="top" secondItem="ZVv-E3-pkm" secondAttribute="top" id="bzm-Ym-Pdn"/>
+                                                <constraint firstItem="K32-D6-VSz" firstAttribute="leading" secondItem="ZVv-E3-pkm" secondAttribute="leading" id="tiG-PR-uua"/>
+                                                <constraint firstItem="8AN-5X-QLW" firstAttribute="top" secondItem="ZVv-E3-pkm" secondAttribute="topMargin" id="wEc-w9-KCE"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
@@ -64,6 +79,9 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
+                                            <outlet property="artistName" destination="gYw-Zv-e07" id="seZ-K2-fHz"/>
+                                            <outlet property="posterImg" destination="K32-D6-VSz" id="FJ5-7u-dxy"/>
+                                            <outlet property="songTitle" destination="8AN-5X-QLW" id="DPo-gK-3Ox"/>
                                             <segue destination="gvL-KK-BUi" kind="show" identifier="SegueToSongView" id="tPa-MV-3tt"/>
                                         </connections>
                                     </tableViewCell>
