--- a/ZhongWenKaraoke/Base.lproj/Main.storyboard
+++ b/ZhongWenKaraoke/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XYH-qT-rCt" id="ZVv-E3-pkm">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K32-D6-VSz">
@@ -82,7 +82,7 @@
                                             <outlet property="artistName" destination="gYw-Zv-e07" id="seZ-K2-fHz"/>
                                             <outlet property="posterImg" destination="K32-D6-VSz" id="FJ5-7u-dxy"/>
                                             <outlet property="songTitle" destination="8AN-5X-QLW" id="DPo-gK-3Ox"/>
-                                            <segue destination="gvL-KK-BUi" kind="show" identifier="SegueToSongView" id="tPa-MV-3tt"/>
+                                            <segue destination="1bP-cQ-iyw" kind="show" identifier="SegueToSongView" id="tPa-MV-3tt"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -105,10 +105,10 @@
             </objects>
             <point key="canvasLocation" x="972" y="37.331334332833585"/>
         </scene>
-        <!--Migu Song View Controller-->
+        <!--Song-->
         <scene sceneID="kVf-va-RWe">
             <objects>
-                <viewController id="gvL-KK-BUi" customClass="MiguSongViewController" customModule="ZhongWenKaraoke" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="gvL-KK-BUi" customClass="MiguSongDetailsViewController" customModule="ZhongWenKaraoke" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="CGd-r7-tuw"/>
                         <viewControllerLayoutGuide type="bottom" id="0yB-0i-lMx"/>
@@ -117,45 +117,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xFS-Qz-4NL">
-                                <rect key="frame" x="37" y="64" width="300" height="292"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xFS-Qz-4NL">
+                                <rect key="frame" x="37" y="64" width="300" height="243"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jeq-8j-PdA">
-                                <rect key="frame" x="37" y="364" width="300" height="29"/>
+                                <rect key="frame" x="37" y="315" width="300" height="29"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="artist name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IcD-6F-EPZ">
-                                <rect key="frame" x="37" y="401" width="300" height="21"/>
+                                <rect key="frame" x="37" y="352" width="300" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="p1C-Ci-ycW">
-                                <rect key="frame" x="16" y="430" width="343" height="237"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LyricLineCell" textLabel="zC6-JQ-7i5" style="IBUITableViewCellStyleDefault" id="1Js-x9-hHv">
-                                        <rect key="frame" x="0.0" y="28" width="343" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1Js-x9-hHv" id="53e-CD-c0K">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zC6-JQ-7i5">
-                                                    <rect key="frame" x="15" y="0.0" width="313" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -171,16 +147,16 @@
                             <constraint firstItem="IcD-6F-EPZ" firstAttribute="top" secondItem="Jeq-8j-PdA" secondAttribute="bottom" constant="8" symbolic="YES" id="yT6-Ju-8bk"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Song" id="uEW-oR-Gq8"/>
                     <connections>
                         <outlet property="artistName" destination="IcD-6F-EPZ" id="xbY-bR-4vX"/>
-                        <outlet property="lyricsTable" destination="p1C-Ci-ycW" id="dU2-I5-Vky"/>
                         <outlet property="posterImage" destination="xFS-Qz-4NL" id="KOx-v8-ape"/>
                         <outlet property="songTitle" destination="Jeq-8j-PdA" id="19Y-pk-0co"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mDX-g2-tPp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1973.5999999999999" y="36.431784107946029"/>
+            <point key="canvasLocation" x="2912.8000000000002" y="36.431784107946029"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="DwB-I9-pFr">
@@ -199,6 +175,77 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Ho-z9-bQ0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="32.799999999999997" y="37.331334332833585"/>
+        </scene>
+        <!--Migu Song Tab Bar Controller-->
+        <scene sceneID="Khq-wL-Hqa">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="1bP-cQ-iyw" customClass="MiguSongTabBarController" customModule="ZhongWenKaraoke" customModuleProvider="target" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Di1-a4-WQ2">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="gvL-KK-BUi" kind="relationship" relationship="viewControllers" id="vEU-NJ-8b3"/>
+                        <segue destination="1Gm-NZ-yom" kind="relationship" relationship="viewControllers" id="rnR-ey-a0Q"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CJ4-Ic-UiJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1973.5999999999999" y="36.431784107946029"/>
+        </scene>
+        <!--Lyrics-->
+        <scene sceneID="HgS-K7-lOV">
+            <objects>
+                <viewController id="1Gm-NZ-yom" customClass="MiguSongLyricsViewController" customModule="ZhongWenKaraoke" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="LbA-mg-9LE"/>
+                        <viewControllerLayoutGuide type="bottom" id="W0Z-0i-3fa"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yVU-w9-CkR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="K0Q-dS-bh2">
+                                <rect key="frame" x="16" y="72" width="343" height="546"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LyricLineCell" textLabel="dJO-zt-JKt" style="IBUITableViewCellStyleDefault" id="OPP-eH-lwF">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OPP-eH-lwF" id="cd4-xX-dcr">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dJO-zt-JKt">
+                                                    <rect key="frame" x="15" y="0.0" width="313" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="K0Q-dS-bh2" firstAttribute="top" secondItem="LbA-mg-9LE" secondAttribute="bottom" constant="8" symbolic="YES" id="1PX-hp-AY6"/>
+                            <constraint firstItem="K0Q-dS-bh2" firstAttribute="bottom" secondItem="W0Z-0i-3fa" secondAttribute="top" id="fKV-Sf-vMj"/>
+                            <constraint firstItem="K0Q-dS-bh2" firstAttribute="trailing" secondItem="yVU-w9-CkR" secondAttribute="trailingMargin" id="gN2-kg-wzs"/>
+                            <constraint firstItem="K0Q-dS-bh2" firstAttribute="leading" secondItem="yVU-w9-CkR" secondAttribute="leadingMargin" id="oPt-ju-l0w"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Lyrics" id="jLJ-91-oFE"/>
+                    <connections>
+                        <outlet property="lyricsTable" destination="K0Q-dS-bh2" id="MxU-7D-x9G"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hci-wx-ayM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3636" y="36.431784107946029"/>
         </scene>
     </scenes>
 </document>
